/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/orderer/sbft";

package sbft;

import "simplebft/simplebft.proto";

message consensus_config {
        simplebft.Config consensus = 1;
        map<string, bytes> peers = 2;
};

message json_config {
        simplebft.Config consensus = 1;
        repeated peer peers = 2;
};

message peer {
        string address = 1;
        string cert = 2;
};
